# CppPAL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml
.ci/: Invoke-BatchFile.ps1  Setup-VSEnv.ps1
.ci/cmake/: win-amd64-clangcl-toolchain.cmake  win-amd64-msvc-v140-toolchain.cmake  win-amd64-msvc-v141-toolchain.cmake  win-amd64-msvc-v142-toolchain.cmake  win-amd64-msvc-v143-toolchain.cmake  win-arm-msvc-v141-toolchain.cmake  win-arm-msvc-v142-toolchain.cmake  win-arm-msvc-v143-toolchain.cmake  win-arm64-msvc-v141-toolchain.cmake  win-arm64-msvc-v142-toolchain.cmake  win-arm64-msvc-v143-toolchain.cmake  win-vs-toolchain.cmake  win-x86-clangcl-toolchain.cmake  win-x86-msvc-v140-toolchain.cmake  win-x86-msvc-v141-toolchain.cmake  win-x86-msvc-v142-toolchain.cmake  win-x86-msvc-v143-toolchain.cmake
cmake/: StaticCodeAnalysis.cmake
include/cpppal/: any.h  compiler.h  expected.h  optional.h  span.h  string_view.h
tests/: CMakeLists.txt  expected.cpp  platform_macros.cpp
